# Raytracer

./: PPM_viewer  README.md  raytracer
PPM_viewer_src/: CMakeLists.txt  Color.hpp  Ppm_file.cpp  Ppm_file.hpp  main.cpp
scenes/: cornell_box.scene  reflection.scene
